logs/press.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/ipaddress-1.0.19.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/press'...
Listing './lib/python3.5/site-packages/press/configuration'...
Listing './lib/python3.5/site-packages/press/generators'...
Listing './lib/python3.5/site-packages/press/helpers'...
Listing './lib/python3.5/site-packages/press/hooks'...
Listing './lib/python3.5/site-packages/press/layout'...
Listing './lib/python3.5/site-packages/press/layout/filesystems'...
Listing './lib/python3.5/site-packages/press/logger'...
Listing './lib/python3.5/site-packages/press/models'...
Listing './lib/python3.5/site-packages/press/plugins'...
Listing './lib/python3.5/site-packages/press/plugins/kserver'...
Listing './lib/python3.5/site-packages/press/plugins/packages'...
Listing './lib/python3.5/site-packages/press/plugins/rax'...
Listing './lib/python3.5/site-packages/press/plugins/server_management'...
Listing './lib/python3.5/site-packages/press/targets'...
Listing './lib/python3.5/site-packages/press/targets/linux'...
Listing './lib/python3.5/site-packages/press/targets/linux/debian'...
Listing './lib/python3.5/site-packages/press/targets/linux/debian/networking'...
Listing './lib/python3.5/site-packages/press/targets/linux/debian/ubuntu_1404'...
Listing './lib/python3.5/site-packages/press/targets/linux/debian/ubuntu_1604'...
Listing './lib/python3.5/site-packages/press/targets/linux/redhat'...
Listing './lib/python3.5/site-packages/press/targets/linux/redhat/enterprise_linux'...
Listing './lib/python3.5/site-packages/press/targets/linux/redhat/enterprise_linux/enterprise_linux_6'...
Listing './lib/python3.5/site-packages/press/targets/linux/redhat/enterprise_linux/enterprise_linux_7'...
Listing './lib/python3.5/site-packages/press/targets/util'...
Listing './lib/python3.5/site-packages/press/tests'...
Listing './lib/python3.5/site-packages/press-0.4.9.dist-info'...
Listing './lib/python3.5/site-packages/python_size-0.0.9.1.dist-info'...
Listing './lib/python3.5/site-packages/pyudev'...
Listing './lib/python3.5/site-packages/pyudev/_ctypeslib'...
Listing './lib/python3.5/site-packages/pyudev/_os'...
Listing './lib/python3.5/site-packages/pyudev/device'...
Listing './lib/python3.5/site-packages/pyudev-0.21.0.egg-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/size'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
